[package]
name = "fractal-analysis"
version = "0.2.0"
authors = ["froderick <velona@ahiru.eu>"]
edition = "2018"
description = "A crate that performs various types of fractal analysis based (currently) on the Z-order Box Merging algorithm."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/DoubleHyphen/fractal-analysis"
documentation = "https://docs.rs/fractal-analysis/1.0.0/fractal_analysis/"
repository = "https://github.com/DoubleHyphen/fractal-analysis"

[dependencies]
morton-encoding = "2.0"
num = "0.2"
num-traits = "0.2"
image = "0.18"
itertools = "0.8"
lindel = "0"

[dependencies.rayon]
version = "1.3"
optional = true

[dependencies.arrayvec]
version = "0.6"
default-features = false

[dev-dependencies]
rand = "0.7"
noise = "0.6"

[features]
default = ["parallel", "std"]
time_things = []
parallel = ["rayon"]
std = []
